# cookiecutter-runner

./: .env.docker  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.md  poetry.req.txt  pyproject.toml
.github/workflows/: python-app.yml
docs/: create_and_update_template.md
src/: main.py  main_test_unit.py  test.py  test2.py  test_test_unit.py
src/core/: initialize_project.py  initialize_project_test_unit.py  isolate_temp_template.py  isolate_temp_template_test_unit.py  mylib_test_integ.py
src/core/initialize_project_test_assets/: .gitignore
src/core/initialize_project_test_assets/create_project_case_2_with_ignored_file/{{cookiecutter.var_name}}/: .gitignore
src/core/initialize_project_test_assets/create_project_case_5_python_app_sample/: cookiecutter.json
src/core/initialize_project_test_assets/create_project_case_5_python_app_sample/hooks/: post_gen_project.py  pre_gen_project.py
src/core/initialize_project_test_assets/create_project_case_5_python_app_sample/{{cookiecutter.project_name}}/: .dockerignore  .env.docker  .flake8  .gitignore  Makefile  README.md  poetry.req.txt  poetry.toml  pyproject.toml
src/core/initialize_project_test_assets/create_project_case_5_python_app_sample/{{cookiecutter.project_name}}/.github/workflows/: python-app.yml
src/core/initialize_project_test_assets/create_project_case_5_python_app_sample/{{cookiecutter.project_name}}/notebook/: testing_note.py  testing_notebook.ipynb
src/core/initialize_project_test_assets/create_project_case_5_python_app_sample/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: test.py  test2.py  test_test_unit.py
src/core/initialize_project_test_assets/create_project_case_5_python_app_sample/{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/core/: mylib.py
src/core/initialize_project_test_assets/install_project_case_1_simple/: Makefile
src/core/isolate_temp_template_test_assets/: .gitignore
src/core/isolate_temp_template_test_assets/run_2_with_ignored_file/: cookiecutter.json
src/core/isolate_temp_template_test_assets/run_temp_case/: cookiecutter.json
src/core/isolate_temp_template_test_assets/run_temp_case/{{cookiecutter.var_name}}/: .gitignore
src/main_test_assets/run_case_1/: cookiecutter.json
src/main_test_assets/run_case_1/{{cookiecutter.var_name}}/: Makefile  README.md
